# wiset-inflearn-nemo

./: .gitignore  dashboard.css  index.html  pyproject.toml
docs/: nemo_scraping_prompt.md
report/: nemo_eda_report.md  nemo_eda_slides.html  nemo_eda_slides.md
src/: nemo_eda.py  nemo_scraper.py
