[project]
name = "wiset-inflearn-nemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
]
